--- a/src/app/detail/[id]/_layout/styles.module.css
+++ b/src/app/detail/[id]/_layout/styles.module.css
@@ -2,7 +2,7 @@
 
 .wrapper {
   --fixed-width: fixedWidth;
-  width: 100%;
+  width: 100vw;
   display: flex;
   align-items: center;
   flex-flow: column nowrap;
