--- a/src/app/detail/[id]/styles.module.css
+++ b/src/app/detail/[id]/styles.module.css
@@ -1,7 +1,7 @@
 @value mobileMinWidth from "../../values.module.css";
 
 .main {
-  width: 100%;
+  width: 100vw;
 }
 
 .comics {
